# snakeribbon

./: .gitignore  CHANGE_LOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: tests.yml
examples/: word.py
examples/themes/: base.qss  default.qss
snakeribbon/: category.py  constants.py  gallery.py  logger.py  menu.py  panel.py  ribbonbar.py  separator.py  tabbar.py  titlewidget.py  toolbutton.py  utils.py  version.py
