# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "snakeribbon"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
  { name="Ivanov Cyril", email="woah.npc@yandex.ru" },
]
description = "Ribbon Bar for PySide6 applications"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"GitHub" = "https://github.com/uselessvevo/snakeribbon"

[tool.setuptools]
packages = ["snakeribbon"]

[tool.setuptools.package-data]
snakeribbon = ["icons/*", "styles/*"]

[tool.setuptools_scm]
write_to = "snakeribbon/_version.py"
